...
    onClick: () -> Unit,
    enabled: Boolean,
) {
    Button(
        onClick = onClick,
        enabled = enabled,
        modifier = Modifier.testTag("signinButton")
    ) {
        GoogleButtonContent(
            isLoading = isLoading,
            text = stringResource(R.string.sign_in_with_google),
            showOnPrimaryColor = true
        )
...
